Use fixed pixel lenght for scrollbar track

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background: #252525;
-  border-radius: 15%;
+  border-radius: 2px;
 }
 
 .contact-section {
